# chorus

./: Cargo.toml
.github/workflows/: autofix_pr.yml  cherry_pick.yml  chorus_artifacts.yml  chorus_ci.yml  compare_perf.yml  release.yml  release_nightly.yml  run_bundling.yml  run_cron_unit_evals.yml  run_unit_evals.yml
assets/settings/: default.json
crates/agent/src/: agent.rs  native_agent_server.rs  thread.rs
crates/agent/src/tests/: mod.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_connection_store.rs  agent_panel.rs  agent_ui.rs
crates/auto_update/src/: auto_update.rs
crates/cli/src/: main.rs
crates/client/src/: client.rs  zed_urls.rs
crates/crashes/src/: crashes.rs
crates/etw_tracing/: etw_tracing.rs
crates/eval_cli/src/: main.rs
crates/feedback/: Cargo.toml
crates/feedback/src/: feedback.rs
crates/install_cli/src/: install_cli_binary.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: basics_page.rs  onboarding.rs
crates/paths/src/: paths.rs
crates/release_channel/src/: lib.rs
crates/remote/src/: transport.rs
crates/remote/src/transport/: docker.rs  ssh.rs  wsl.rs
crates/remote_server/src/: server.rs
crates/sing_bridge/: Cargo.toml
crates/sing_bridge/src/: api.rs  bridge.rs  client_config.rs  command.rs  error.rs  models.rs  sing_bridge.rs  validation.rs
crates/sing_dispatch/: Cargo.toml
crates/sing_dispatch/src/: sing_dispatch.rs
crates/sing_orchestrator/: Cargo.toml
crates/sing_orchestrator/src/: sing_orchestrator.rs
crates/sing_project/: Cargo.toml
crates/sing_project/src/: client.rs  panel.rs  sing_project.rs  state.rs
crates/sing_spec/: Cargo.toml
crates/sing_spec/src/: client.rs  file_system.rs  index.rs  panel.rs  sing_spec.rs  store.rs  types.rs
crates/util/src/: shell.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: welcome.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/resources/: Document.icns  zed.desktop.in
crates/zed/resources/flatpak/: manifest-template.json  zed.metainfo.xml.in
crates/zed/resources/info/: DocumentTypes.plist
crates/zed/resources/snap/: snapcraft.yaml.in
crates/zed/resources/windows/: zed.iss  zed.sh
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  open_listener.rs  open_url_modal.rs  visual_tests.rs
docs/chorus/: fork-bootstrap.md  github-actions.md  upstream-sync.md
script/: bundle-linux  bundle-mac  bundle-windows.ps1  install-linux  install.sh  uninstall.sh
script/flatpak/: bundle-flatpak
tooling/xtask/src/tasks/workflows/: autofix_pr.rs  cherry_pick.rs  compare_perf.rs  run_agent_evals.rs  run_bundling.rs
