[package]
name = "sing_bridge"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/sing_bridge.rs"

[dependencies]
async-io.workspace = true
reqwest_client.workspace = true
http_client.workspace = true
async-trait.workspace = true
futures.workspace = true
indexmap.workspace = true
log.workspace = true
remote.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
thiserror.workspace = true
util.workspace = true
serde_yaml = "0.9.34"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
